Added experimental otp to prevent build error
See here for details: https://github.com/actions/setup-elixir/issues/49

--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -34,7 +34,8 @@ jobs:
         with:
           elixir-version: ${{ matrix.elixir }} # Define the elixir version [required]
           otp-version: ${{ matrix.otp }} # Define the OTP version [required]
-
+          experimental-otp: true
+           
       - name: Retrieve Mix Dependencies Cache
         uses: actions/cache@v1
         id: mix-cache # id to use in retrieve action
