--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -4,18 +4,6 @@ jobs:
   test:
     runs-on: ubuntu-latest
 
-    services:
-      db:
-        image: postgres:11
-        ports: ['5432:5432']
-        env:
-          POSTGRES_PASSWORD: postgres
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-
     strategy:
       matrix:
         elixir: [1.11.0]
@@ -28,6 +16,13 @@ jobs:
           access_token: ${{ github.token }}
 
       - uses: actions/checkout@v2
+
+      - uses: huaxk/postgis-action@v1
+        with:
+          postgresql version: '11'
+          postgresql password: 'postgres'
+          postgresql user: 'postgres'
+          postgresql db: 'hierbautberlin_test'
 
       - name: Setup elixir
         uses: actions/setup-elixir@v1
