--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -21,6 +21,7 @@
       - m4
       - postgresql-12
       - postgresql-server-dev-12
+      - postgresql-12-postgis-3
       - python3-dev
       - python3-pip
       - python3-setuptools
