--- a/assets/package.json
+++ b/assets/package.json
@@ -9,12 +9,15 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@turf/helpers": "^6.3.0",
+    "@turf/turf": "^6.3.0",
     "lodash-es": "^4.17.21",
     "mapbox-gl": "^2.3.0",
     "milligram": "^1.4.1",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
     "phoenix_live_view": "file:../deps/phoenix_live_view",
+    "stimulus": "^2.0.0",
     "topbar": "^1.0.1"
   },
   "devDependencies": {
