--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -6,8 +6,8 @@ jobs:
 
     strategy:
       matrix:
-        elixir: [1.12.0]
-        otp: [24.0]
+        elixir: [1.12.2]
+        otp: [23.3]
 
     steps:
       - name: Cancel Previous Runs
@@ -16,6 +16,11 @@ jobs:
           access_token: ${{ github.token }}
 
       - uses: actions/checkout@v2
+
+      - name: Install rust
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
 
       - uses: huaxk/postgis-action@v1
         with:
