--- a/assets/package.json
+++ b/assets/package.json
@@ -14,6 +14,7 @@
     "lodash-es": "^4.17.21",
     "mapbox-gl": "^2.3.1",
     "milligram": "^1.4.1",
+    "pdfjs-dist": "^2.8.335",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
     "phoenix_live_view": "file:../deps/phoenix_live_view",
@@ -21,6 +22,8 @@
     "topbar": "^1.0.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.6",
+    "@babel/preset-env": "^7.14.7",
     "@types/lodash-es": "^4.17.4",
     "@types/mapbox-gl": "^2.3.3",
     "@types/nprogress": "^0.2.0",
@@ -28,27 +31,25 @@
     "@types/phoenix_live_view": "^0.15.1",
     "@typescript-eslint/eslint-plugin": "^4.28.3",
     "@typescript-eslint/parser": "^4.28.3",
-    "@babel/core": "^7.14.6",
-    "@babel/preset-env": "^7.14.7",
     "babel-loader": "^8.0.0",
     "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^6.0.0",
-    "file-loader": "^6.2.0",
     "eslint": "^7.30.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-plugin-import": "^2.23.4",
-    "glob": "^7.1.6",
+    "file-loader": "^6.2.0",
     "hard-source-webpack-plugin": "^0.13.1",
     "mini-css-extract-plugin": "^2.1.0",
     "optimize-css-assets-webpack-plugin": "^6.0.1",
-    "sass-loader": "^12.1.0",
     "sass": "^1.35.2",
+    "sass-loader": "^12.1.0",
     "source-map-loader": "^3.0.0",
     "terser-webpack-plugin": "^5.1.4",
     "ts-loader": "^9.2.3",
     "typescript": "^4.3.5",
-    "webpack-cli": "^4.7.2",
-    "webpack": "^5.44.0"
+    "webpack": "^5.44.0",
+    "webpack-bundle-analyzer": "^4.4.2",
+    "webpack-cli": "^4.7.2"
   }
 }
